--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,4 +13,6 @@
 <string name="scan_now">Scan Now!</string>
 <string name="results">Results</string>
 <string name="scanning">Scanning:</string>
+<string name="menu_about">About</string>
+<string name="menu_exit">Exit</string>
 </resources>
