--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
 <string name="scanning">Scanning:</string>
 <string name="menu_about">About</string>
 <string name="menu_exit">Exit</string>
+<string name="menu_rotate">Rotate</string>
 <string name="menu_rerun">Re-run</string>
 </resources>
