--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,4 +17,5 @@
 <string name="menu_exit">Exit</string>
 <string name="menu_rotate">Rotate</string>
 <string name="menu_rerun">Re-run</string>
+<string name="wifi_only">Unable to run scan when not connected via Wifi.</string>
 </resources>
