--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,17 +4,18 @@
     <string name="app_name">Port Scanner</string>
 <string name="ip_mode">IP Mode:</string>
 <string name="port_mode">Ports:</string>
-<string name="subnet">Subnet:</string>
-
+<string name="subnet">Subnet (x.y.z format):</string>
+<string name="done_scanning">Done Scanning!</string>
 <string name="less_than_1024">&lt; 1024</string>
 <string name="common_ports">Common</string>
 <string name="all_ports">All</string>
+<string name="badreq">Bad Request - Please verify your request.</string>
 <string name="ip">IP:</string>
 <string name="scan_now">Scan Now!</string>
 <string name="results">Results</string>
 <string name="scanning">Scanning:</string>
 <string name="menu_about">About</string>
-<string name="menu_exit">Exit</string>
+<string name="menu_exit">Return</string>
 <string name="menu_rotate">Rotate</string>
 <string name="menu_rerun">Re-run</string>
 <string name="wifi_only">Unable to run scan when not connected via Wifi.</string>
