formatting, added num of threads to preferences, code, also moved button handler into its own function for code readability

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,13 +6,16 @@
 <string name="prompt_port_mode">Ports:</string>
 <string name="prompt_conn_timeout">Timeout</string>
 <string name="prompt_conn_timeout_desc">Connection timeout in milliseconds</string>
+<string name="prompt_num_threads">Number of threads</string>
+<string name="prompt_num_threads_desc">Number of simultaneous threads for network scanning</string>
 <string name="prompt_wifionly">Wifi Only</string>
 <string name="prompt_wifionly_on">Scan only when wifi is on</string>
 <string name="prompt_wifionly_off">Allow scanning even if wifi is off</string>
 <string name="prompt_wifionly_desc">Whether to restrict scanning to wifi only</string>
-<string name="prompt_subnet">IP Address / Network:</string>
-<string name="prompt_netmask">Bits in subnet mask (/24, /30):</string>
+<string name="prompt_subnet">IP Address:</string>
+<string name="prompt_netmask">Subnet:</string>
 <string name="prompt_scan_now">Scan Now!</string>
+<string name="prompt_see_prefs">More options are in Prefs menu.</string>
 <string name="done_scanning">Done Scanning!</string>
 <string name="results">Results</string>
 <string name="scanning">Scanning:</string>
