--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,7 @@
 <string name="results">Results</string>
 <string name="scanning">Scanning:</string>
 <string name="err_badreq">Bad Request - Please verify your request.</string>
-<string name="err_wifi_only">Unable to run scan when not connected via Wifi.</string>
+<string name="err_wifi_only">Unable to run scan when not connected via Wifi (see Settings to enable 3G scanning).</string>
 <string name="err_invalid_portlist">Invalid port list.</string>
 <string name="opt_ports_less_than_1024">Ports &lt; 1024</string>
 <string name="opt_ports_common">Common Ports</string>
