--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 <string name="hello">Port Scanner by Chris Wiegand</string>
 <string name="app_name">Port Scanner</string>
 <string name="prompt_ip_mode">IP Mode:</string>
-<string name="prompt_port_mode">Ports:</string>
+<string name="prompt_port_mode">Port List:</string>
 <string name="prompt_conn_timeout">Timeout</string>
 <string name="prompt_conn_timeout_desc">Connection timeout in milliseconds</string>
 <string name="prompt_num_threads">Number of threads</string>
@@ -12,18 +12,20 @@
 <string name="prompt_wifionly_on">Scan only when wifi is on</string>
 <string name="prompt_wifionly_off">Allow scanning even if wifi is off</string>
 <string name="prompt_wifionly_desc">Whether to restrict scanning to wifi only</string>
-<string name="prompt_subnet">IP Address:</string>
-<string name="prompt_netmask">Subnet:</string>
+<string name="prompt_defaultports">Default Ports to Scan</string>
+<string name="prompt_subnet">Single IP Address or Hostname:</string>
+<string name="prompt_netmask">Subnet size:</string>
 <string name="prompt_scan_now">Scan Now!</string>
 <string name="prompt_see_prefs">More options are in Prefs menu.</string>
 <string name="done_scanning">Done Scanning!</string>
 <string name="results">Results</string>
 <string name="scanning">Scanning:</string>
-<string name="err_badreq">Bad Request - Please verify your request.</string>
-<string name="err_wifi_only">Unable to run scan when not connected via Wifi (see Settings to enable 3G scanning).</string>
+<string name="err_badreq">Bad Request</string>
+<string name="err_wifi_only">Unable to run scan when not connected via Wifi (see Settings to enable non-Wifi scanning).</string>
 <string name="err_invalid_portlist">Invalid port list.</string>
 <string name="opt_ports_less_than_1024">Ports &lt; 1024</string>
 <string name="opt_ports_common">Common Ports</string>
+<string name="opt_ports_custom">Custom Port List</string>
 <string name="opt_ports_all">All Ports</string>
 <string name="menu_about">About</string>
 <string name="menu_exit">Close</string>
